Fixed issue with buttons stacking on IE11:

--- a/src/features/HCardBuilder/components/HCardBuilder.css
+++ b/src/features/HCardBuilder/components/HCardBuilder.css
@@ -14,7 +14,7 @@
 .flex-grid.two-col > * {
   display: flex;
   flex-direction: column;
-  flex-basis: calc(50% - 20px);
+  width: calc(50% - 20px);
 }
 .flex-grid > * {
   margin: 0 10px;
